[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Adekunle Adetunji <adekunleadetunjiwilson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
